# font_to_svg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  download_unicode_data.py  example4.cpp  font_to_svg.hpp  format.sh  main.cpp
examples/: example1.cpp  example2.cpp  extractAllGlyphs.cpp
unicode_blocks/: african.hpp  alphabetic_presentation.hpp  american.hpp  ancient.hpp  armenian.hpp  brahmic.hpp  cjk_compatibility.hpp  cjk_unified_ideographs_extension_a.hpp  cjk_unified_ideographs_extension_b_p1.hpp  cjk_unified_ideographs_extension_b_p2.hpp  cjk_unified_ideographs_extension_b_p3.hpp  cjk_unified_ideographs_extension_b_p4.hpp  cjk_unified_ideographs_extension_b_p5.hpp  cjk_unified_ideographs_extension_b_p6.hpp  cjk_unified_ideographs_extension_b_p7.hpp  cjk_unified_ideographs_extension_c.hpp  cjk_unified_ideographs_extension_d.hpp  cjk_unified_ideographs_extension_e.hpp  cjk_unified_ideographs_extension_f.hpp  cjk_unified_ideographs_p1.hpp  cjk_unified_ideographs_p2.hpp  cjk_unified_ideographs_p3.hpp  cjk_unified_ideographs_p4.hpp  combining_marks.hpp  cyrillic.hpp  east_asian.hpp  east_asian_p1.hpp  east_asian_p2.hpp  georgian.hpp  greek_and_coptic.hpp  latin.hpp  mongolian.hpp  other_southcentral_asian.hpp  phonetic.hpp  semitic.hpp  shavian.hpp  southeast_asian.hpp  symbols.hpp  thaana.hpp
